// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#E9EBEE",
        "flex": 1,
        "flexDirection": "column",
        "position": "relative",
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      false,
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="#AAA"
    hidesWhenStopped={true}
    size="large"
  />
  <View
    style={
      Object {
        "height": 1,
        "left": 0,
        "marginTop": 9,
        "right": 0,
      }
    }
  />
</View>
`;

exports[`Loading w/ text renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#E9EBEE",
        "flex": 1,
        "flexDirection": "column",
        "position": "relative",
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      false,
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="#AAA"
    hidesWhenStopped={true}
    size="large"
  />
  <View
    style={
      Object {
        "height": 1,
        "left": 0,
        "marginTop": 9,
        "right": 0,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    h1={false}
    h2={false}
    h3={false}
    h4={false}
    h5={false}
    onPress={null}
    p={false}
    style={
      Array [
        Object {
          "color": "#222222",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 18,
          "fontWeight": "500",
          "lineHeight": 23,
        },
      ]
    }
  >
    Checking for Updates
  </Text>
</View>
`;

exports[`Transparent renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#E9EBEE",
        "flex": 1,
        "flexDirection": "column",
        "position": "relative",
      },
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "rgba(255,255,255,0.75)",
      },
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="#000"
    hidesWhenStopped={true}
    size="large"
  />
  <View
    style={
      Object {
        "height": 1,
        "left": 0,
        "marginTop": 9,
        "right": 0,
      }
    }
  />
</View>
`;
